--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -121,6 +121,7 @@
                 color: whitesmoke;
                 border-radius: 20px;
                 margin-left: 50px;
+                border-width: 1px;
                 &:hover{
                     cursor: pointer;
                 }
