--- a/src/sass/Home.css
+++ b/src/sass/Home.css
@@ -7,41 +7,25 @@
 .container {
   height: 93vh;
   width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .container .left {
   width: 60vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 .container .left .tag-line {
   height: 7vh;
 }
-
 .container .left .image {
   height: 90vh;
   background: url("../images/bg1.jpg") no-repeat center;
   background-size: 850px auto;
 }
-
 .container .right {
   width: 40vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   -webkit-animation-name: right;
           animation-name: right;
   -webkit-animation-duration: 1s;
@@ -49,44 +33,37 @@
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
-
 .container .right h2 {
   text-align: center;
   margin-top: 5%;
   padding: 5px 10px;
 }
-
 .container .right h2::before {
   content: "Melon";
   color: blue;
   font-size: 40px;
-  font-family: 'Italianno', cursive;
+  font-family: "Italianno", cursive;
 }
-
 .container .right h2::after {
   content: "Play";
   color: black;
   font-size: 40px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
 .container .right h3 {
   color: black;
   text-align: left;
   font-size: 40px;
   margin-top: 5%;
 }
-
 .container .right h4 {
   color: black;
   margin-top: 3%;
 }
-
 .container .right p {
   color: black;
   margin-top: 2%;
 }
-
 .container .right .start-call-btn {
   width: 200px;
   margin-top: 5%;
@@ -98,43 +75,30 @@
   border: none;
   border-radius: 20px;
 }
-
 .container .right .start-call-btn:hover {
   cursor: pointer;
 }
-
 .container .right .bottom {
   margin-top: 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   height: 32vh;
 }
-
 .container .right .bottom .about {
   margin-top: 1%;
   width: 450px;
   margin-left: 50px;
   text-align: left;
 }
-
 .container .right .bottom .about h5 {
   display: inline;
   font-size: 40px;
   color: black;
 }
-
 .container .right .bottom .about p {
   color: black;
 }
-
 .container .right .bottom .know-more {
   margin-top: 5%;
   font-size: 18px;
@@ -143,12 +107,11 @@
   color: whitesmoke;
   border-radius: 20px;
   margin-left: 50px;
+  border-width: 1px;
 }
-
 .container .right .bottom .know-more:hover {
   cursor: pointer;
 }
-
 @-webkit-keyframes right {
   from {
     opacity: 0;
@@ -157,7 +120,6 @@
     opacity: 1;
   }
 }
-
 @keyframes right {
   from {
     opacity: 0;
@@ -165,5 +127,4 @@
   to {
     opacity: 1;
   }
-}
-/*# sourceMappingURL=Home.css.map */
+}/*# sourceMappingURL=Home.css.map */
