--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -1,134 +1,77 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
+$btn-text-size: 1.5;
+
+@mixin setFontSize($size) {
+    font-size: calc((1vw + 1vh) * ($size / 2)) !important;
 }
 
-body {
-    background: black;
-}
-
-body {
-    &::before {
-        position: absolute;
-        content: "";
-        background: url('../images/trees-gdf54ce2a8_1280.jpg');
-        background-size: cover;
-        opacity: .5;
-        width: 100%;
-        height: 100vh;
-        // filter: blur(1px);
-        z-index: -1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-h1 {
-    // border: 2px solid white;
-    width: 15%;
-    text-align: center;
-    display: block;
-    margin: auto;
-    margin-top: 7%;
-    font-size: 35px;
-    
-    &::before {
-        font-family: 'Italianno', cursive;
-        content: "Melon";
-        color: rgb(106, 106, 218);
-        text-decoration: underline;
-    }
-
-    &::after {
-        content: "play";
-        color: white;
-        text-decoration: underline;
-    }
-}
-
-.container {
-    background: white;
-    width: 40%;
-    height: 60vh;
-    display: block;
-    margin: auto;
-    margin-top: 5%;
-    border-radius: 12px;
+.login-wrapper {
+    overflow: scroll;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 0;
+    background-color: rgba(216, 12, 12, 0.7);
 
-    h2 {
-        margin-bottom: 2%;
-        font-size: 30px;
-        font-family: 'Roboto', sans-serif;
-    }
-
-    .login {
-        // border: 2px solid blue;
-        width: 80%;
-        height: 40vh;
+    .login-container {
+        position: absolute;
+        width: 100vw;
+        height: 70vh;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
 
-        .input {
-            // border: 2px solid black;
-            width: 90%;
-            margin: 10px 0px;
-            display: flex;
-            justify-content: center;
-
-            input {
-                // border-radius: 10px;
-                font-weight: lighter;
-                font-size: 15px;
-                width: 80%;
-                padding: 5px 20px;
-                font-style: italic;
-                border: none;
-                border-bottom: 1px solid black;
-            }
-        }
-
-        .anchor {
-            margin: 3% 0% 0% 0%;
-            font-size: 18px;
-            width: 90%;
-
-            // border: 2px solid black;
-            #keep-login {
-                margin-left: 7%;
-                margin-right: 2%;
-            }
-
-            #forget-password {
-                margin-left: 15%;
-                color: blue;
-            }
-        }
-
-        .btn {
-            margin-top: 10%;
-            width: 80%;
-            font-size: 16px;
-            padding: 5px 20px;
-            background: rgb(106, 106, 218);
+        .text-login {
+            flex: 1;
+            padding: 20px;
+            width: 20vw;
+            text-align: start;
+            font-size: xx-large;
             color: white;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            font-weight: bolder;
+            h2{
+                @include setFontSize($btn-text-size+4);
+            }
         }
 
-        .need-an-account {
-            margin-top: 10%;
-            font-size: 18px;
-            font-style: initial;
+        .login {
+            margin: 20px;
+            position: relative;
+            top: 35%;
+            left: 20%;
+            height: 50vh;
+            width: 38vw;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+
+            transform: translate(-55%, -50%);
+            background-color: rgba(#ffffff, 0.9);
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+
+            .login-input {
+                @include setFontSize($btn-text-size);
+                width: 25vw;
+                height: 10vh;
+            }
+
+            .login-loginBtn {
+                @include setFontSize($btn-text-size);
+                height: 5vh;
+                width: 12vw;
+            }
+
+            .login-registerBtn {
+                @include setFontSize($btn-text-size);
+                height: 5vh;
+                width: 18vw;
+                padding: 20px !important;
+            }
+
         }
     }
 }
