--- a/src/sass/navbar.css
+++ b/src/sass/navbar.css
@@ -7,110 +7,108 @@ body {
   color: white;
 }
 
+a {
+  font-size: calc((1vw + 1vh) * 1) !important;
+  text-decoration: none;
+}
+
 .navbar {
   border-bottom: 1px solid whitesmoke;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   height: 7vh;
 }
-
 .navbar h1 {
   font-size: 25px;
+  font-size: calc((1vw + 1vh) * 1.25) !important;
   margin-left: 2%;
 }
-
 .navbar h1::before {
-  font-family: 'Italianno', cursive;
+  font-family: "Italianno", cursive;
   content: "Melon";
   color: blue;
 }
-
 .navbar h1::after {
   content: "play";
   color: black;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
 .navbar ul {
   margin-left: 5%;
   width: 40%;
   font-size: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .navbar ul li {
   text-decoration: none;
   list-style: none;
   margin: 5px 10px;
 }
-
 .navbar ul li a {
   color: black;
-  text-decoration: none;
 }
-
 .navbar ul li:hover {
   cursor: pointer;
-  color: #6f6fae;
-  text-decoration: underline;
+  color: rgb(111, 111, 174);
 }
-
 .navbar ul li #features {
   border: none;
   font-size: 20px;
   cursor: pointer;
 }
-
 .navbar .buttons {
   position: absolute;
-  right: 3%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  right: 1%;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 20vw;
+  justify-content: center;
+  width: 15vw;
+  margin-inline: 10px;
 }
-
 .navbar .buttons .btn-login {
-  font-size: 18px;
-  padding: 4px 20px;
+  font-size: calc((1vw + 1vh) * 0.75) !important;
+  padding: 2px 5px;
   border: none;
   border-radius: 10px;
-  background: white;
-  border: 1px solid blue;
   color: blue;
 }
-
 .navbar .buttons .btn-login:hover {
-  color: white;
-  background-color: blue;
   cursor: pointer;
-  scale: 1.1;
+  font-weight: 500;
 }
-
 .navbar .buttons .btn-signup {
-  font-size: 18px;
-  padding: 4px 20px;
+  font-size: calc((1vw + 1vh) * 0.75) !important;
+  padding: 2px 5px;
   border: none;
   margin-left: 10%;
   border-radius: 10px;
   background: white;
-  border: 1px solid orangered;
   color: orangered;
 }
-
 .navbar .buttons .btn-signup:hover {
   cursor: pointer;
-  background: orangered;
-  color: white;
-  scale: 1.1;
+  font-weight: 500;
 }
-/*# sourceMappingURL=navbar.css.map */
+
+.username {
+  font-size: calc((1vw + 1vh) * 0.75) !important;
+  color: black;
+  cursor: default;
+  transition: 0.25s;
+}
+.username:hover {
+  font-weight: 500;
+}
+
+.signout-btn {
+  font-size: calc((1vw + 1vh) * 0.75) !important;
+  color: #f87777;
+  border: none;
+  background-color: white;
+  margin-inline: 10px;
+  cursor: pointer;
+  transition: 0.25s;
+}
+.signout-btn:hover {
+  font-weight: 500;
+  color: #ff2828;
+}/*# sourceMappingURL=navbar.css.map */
