--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -1,3 +1,10 @@
+$btn-text-size: 1.5;
+$nav-text-size: 2.0;
+
+@mixin setFontSize($size) {
+    font-size: calc((1vw + 1vh) * ($size / 2)) !important;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -7,14 +14,19 @@ body {
     color: white;
 }
 
+a{
+    @include setFontSize($nav-text-size);
+    text-decoration: none;
+}
+
 .navbar {
     border-bottom: 1px solid whitesmoke;
     display: flex;
     align-items: center;
     height: 7vh;
-
     h1 {
         font-size: 25px;
+        @include setFontSize($nav-text-size+0.5);
 
         &::before {
             font-family: 'Italianno', cursive;
@@ -46,13 +58,11 @@ body {
 
             a {
                 color: black;
-                text-decoration: none;
             }
 
             &:hover {
                 cursor: pointer;
                 color: rgb(111, 111, 174);
-                text-decoration: underline;
             }
 
             #features {
@@ -64,46 +74,64 @@ body {
     }
 
     .buttons {
-        // border: 2px solid black;
         position: absolute;
-        right: 3%;
+        right: 1%;
         display: flex;
         justify-content: center;
-        width: 20vw;
+        width: 15vw;
+        margin-inline: 10px;
 
         .btn-login {
-            font-size: 18px;
-            padding: 4px 20px;
+            @include setFontSize($btn-text-size);
+            padding: 2px 5px;
             border: none;
             border-radius: 10px;
-            background: white;
-            border: 1px solid blue;
             color: blue;
-
             &:hover {
-                color: white;
-                background-color: blue;
                 cursor: pointer;
-                scale: 1.1;
+                font-weight: 500;
             }
         }
 
         .btn-signup {
-            font-size: 18px;
-            padding: 4px 20px;
+            @include setFontSize($btn-text-size);
+            padding: 2px 5px;
             border: none;
             margin-left: 10%;
             border-radius: 10px;
             background: white;
-            border: 1px solid orangered;
             color: orangered;
 
             &:hover {
                 cursor: pointer;
-                background: orangered;
-                color: white;
-                scale: 1.1;
+                font-weight: 500;
             }
         }
+    }
+}
+
+.username{
+    @include setFontSize($btn-text-size);
+    color: black;
+    cursor: default;
+    transition: 0.25s;
+    
+    &:hover{
+        font-weight: 500;
+    }
+}
+
+.signout-btn{
+    @include setFontSize($btn-text-size);
+    color: #f87777;
+    border: none;
+    background-color: white;
+    margin-inline: 10px;
+    cursor: pointer;
+    transition: 0.25s;
+    
+    &:hover{
+        font-weight: 500;
+        color: #ff2828;
     }
 }
