--- a/src/sass/signup.css
+++ b/src/sass/signup.css
@@ -6,14 +6,9 @@
 
 body {
   background: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 body::before {
   position: absolute;
   content: "";
@@ -21,9 +16,8 @@ body::before {
   background-size: cover;
   width: 100vw;
   height: 100vh;
-  opacity: .5;
-  -webkit-filter: blur(1px);
-          filter: blur(1px);
+  opacity: 0.5;
+  filter: blur(1px);
   z-index: -1;
 }
 
@@ -35,14 +29,12 @@ h2 {
   margin-top: 8%;
   font-size: 35px;
 }
-
 h2::before {
-  font-family: 'Italianno', cursive;
+  font-family: "Italianno", cursive;
   content: "Melon";
-  color: #6a6ada;
+  color: rgb(106, 106, 218);
   text-decoration: underline;
 }
-
 h2::after {
   content: "play";
   color: white;
@@ -57,55 +49,31 @@ h2::after {
   margin: auto;
   margin-top: 8%;
   border-radius: 12px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .container h3 {
   font-size: 35px;
 }
-
 .container #input-tags {
   width: 90%;
   height: 60%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
-
 .container #input-tags .input {
   width: 40%;
   font-size: 18px;
   margin: 3% 2%;
 }
-
 .container #input-tags .input label {
   font-size: 18px;
 }
-
 .container #input-tags .input input {
   border: none;
   border-bottom: 2px solid blue;
@@ -115,15 +83,13 @@ h2::after {
   padding: 6px 6px;
   width: 90%;
 }
-
 .container .btn {
   width: 40%;
   font-size: 18px;
   padding: 5px 20px;
-  background: #6a6ada;
+  background: rgb(106, 106, 218);
   color: white;
   border: none;
   border-radius: 10px;
   cursor: pointer;
-}
-/*# sourceMappingURL=signup.css.map */
+}/*# sourceMappingURL=signup.css.map */
