--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -57,6 +57,8 @@ a{
             margin: 5px 10px;
 
             a {
+                @include setFontSize($nav-text-size - 0.3);
+
                 color: black;
             }
 
