--- a/src/sass/video_call.css
+++ b/src/sass/video_call.css
@@ -1,260 +1,79 @@
-* {
-  margin: 0px;
-  padding: 0px;
+.video-container {
+  height: 100vh;
+  overflow: scroll;
+  background-color: black;
 }
-
-.video-call-container {
-  height: 93vh;
+.video-container .media-stream {
+  height: 100vh;
+  width: 100vw;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.video-call-container .video-call-left {
-  width: 65vw;
+.video-container .media-stream video {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
-.video-call-container .video-call-left .video-call {
-  height: 86vh;
-  display: flex;
-  flex-wrap: wrap;
+.video-container .media-stream a {
+  position: absolute;
+  left: 1vw;
+  top: 2vh;
+  color: rgba(255, 255, 255, 0.7);
+  transition: 0.2s;
+  z-index: 1;
 }
-.video-call-container .video-call-left .video-call .friend {
-  border-radius: 20px;
-  background: whitesmoke;
-  width: 20vw;
+.video-container .media-stream a:hover {
+  color: rgb(255, 255, 255);
+}
+.video-container .media-stream .self-camera {
+  position: absolute;
+  top: calc((1vh + 1vw) * 1.5);
+  right: calc((1vh + 1vw) * 0.5);
+  width: 10vw;
   height: 20vh;
-  margin: 1% 1%;
-  box-shadow: 5px 5px 20px 10px grey;
-}
-.video-call-container .video-call-left .video-call .friend .frnd-icons {
-  display: flex;
-  width: 70px;
-  position: relative;
-  left: 70%;
-  top: 75%;
-}
-.video-call-container .video-call-left .video-call .friend .frnd-icons .frnd-mic {
-  color: blue;
-}
-.video-call-container .video-call-left .video-call .friend .frnd-icons .frnd-mic:hover {
-  cursor: pointer;
-}
-.video-call-container .video-call-left .video-call .friend .frnd-icons .frnd-video {
-  margin-left: 30%;
-  color: black;
-}
-.video-call-container .video-call-left .video-call .friend .frnd-icons .frnd-video:hover {
-  cursor: pointer;
-}
-.video-call-container .video-call-left .video-call .friend-1 {
-  width: 65vw;
-  height: 60vh;
-  margin: 1%;
-  box-shadow: 5px 5px 20px 10px grey;
-}
-.video-call-container .video-call-left .video-call .friend-1 .frnd1-icons {
-  display: flex;
-  width: 70px;
-  position: relative;
-  left: 87%;
-  top: 90%;
-}
-.video-call-container .video-call-left .video-call .friend-1 .frnd1-icons .frnd-mic {
-  color: blue;
-}
-.video-call-container .video-call-left .video-call .friend-1 .frnd1-icons .frnd-mic:hover {
-  cursor: pointer;
-}
-.video-call-container .video-call-left .video-call .friend-1 .frnd1-icons .frnd-video {
-  margin-left: 30%;
-  color: black;
-}
-.video-call-container .video-call-left .video-call .friend-1 .frnd1-icons .frnd-video:hover {
-  cursor: pointer;
-}
-.video-call-container .video-call-left .buttons {
-  height: 7vh;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-}
-.video-call-container .video-call-left .buttons .buttons-section-mic {
-  color: blue;
-  margin: 0px 20px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  box-shadow: 10px 10px 5px grey;
-}
-.video-call-container .video-call-left .buttons .buttons-section-mic:hover {
-  cursor: pointer;
-  scale: 1.1;
-}
-.video-call-container .video-call-left .buttons .buttons-section-video {
-  color: black;
-  margin: 0px 20px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  box-shadow: 10px 10px 5px grey;
-}
-.video-call-container .video-call-left .buttons .buttons-section-video:hover {
-  cursor: pointer;
-  scale: 1.1;
-}
-.video-call-container .video-call-left .buttons .buttons-section-screen-share {
-  color: black;
-  margin: 0px 20px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  box-shadow: 10px 10px 5px grey;
-}
-.video-call-container .video-call-left .buttons .buttons-section-screen-share:hover {
-  cursor: pointer;
-  scale: 1.1;
-}
-.video-call-container .video-call-left .buttons .end-meeting {
-  font-size: 18px;
-  padding: 5px 20px;
-  color: white;
-  background: red;
-  border-radius: 20px;
-  margin: 0px 20px;
-  box-shadow: 5px 5px 5px grey;
-}
-.video-call-container .video-call-left .buttons .end-meeting:hover {
-  scale: 1.1;
-  cursor: pointer;
-}
-.video-call-container .participants-chats-right {
-  width: 35vw;
-  height: 92vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-.video-call-container .participants-chats-right .participants-section {
-  height: 46vh;
-}
-.video-call-container .participants-chats-right .participants-section .participant-heading {
-  border-radius: 20px;
-  box-shadow: 2px 2px 10px grey;
-  color: black;
-  text-align: center;
-  font-size: 14px;
-  padding: 5px 0px;
-  background: grey;
-  color: white;
-  text-shadow: 1px 1px 10px whitesmoke;
-  font-family: "Courier New", Courier, monospace;
-}
-.video-call-container .participants-chats-right .participants-section .participants {
-  border-radius: 20px;
-  height: 40vh;
-  overflow-y: auto;
-  padding: 5px 40px;
-}
-.video-call-container .participants-chats-right .participants-section .participants .participant {
-  color: black;
-  width: 27vw;
-  font-size: 20px;
-  padding: 5px 0px 5px 20px;
-  margin: 20px 0px;
-  border-radius: 20px;
+.video-container .media-stream .self-camera .camera {
+  width: 5vw;
+  height: 10vh;
   display: flex;
-  box-shadow: 6px 6px 10px 4px grey;
+  align-items: center;
+  justify-content: center;
 }
-.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons {
-  width: 70px;
-  margin-left: auto;
+.video-container .media-stream .self-camera .camera video {
+  width: calc((1vh + 1vw) * 3);
+  height: calc((1vh + 1vw) * 3);
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+  transform: rotateY(180deg);
 }
-.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-mic {
-  color: blue;
-  display: inline;
-}
-.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-mic:hover {
-  cursor: pointer;
-}
-.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-video {
-  display: inline;
-  margin-left: 20px;
-}
-.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-video:hover {
-  cursor: pointer;
-}
-.video-call-container .participants-chats-right .chatting-section {
-  height: 46vh;
-}
-.video-call-container .participants-chats-right .chatting-section .chat-heading {
-  border-radius: 20px;
-  font-size: 14px;
+.video-container .media-stream .self-camera .buttons-toggle {
+  height: 4vh;
+  width: 9vw;
   display: flex;
   justify-content: center;
-  align-content: center;
-  color: black;
-  font-family: "Courier New", Courier, monospace;
-  text-shadow: 2px 2px 10px whitesmoke;
-  box-shadow: 2px 2px 10px 5px grey;
-  background: grey;
-  color: white;
-  padding: 4px 0px;
+  align-items: center;
 }
-.video-call-container .participants-chats-right .chatting-section .chats {
-  border-radius: 20px;
-  height: 37vh;
-  color: black;
-  overflow-y: auto;
+.video-container .participants {
+  height: 30vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow-x: scroll;
 }
-.video-call-container .participants-chats-right .chatting-section .chats .message {
-  margin: 5px 10px;
-  padding: 4px 10px;
-  box-shadow: 2px 2px 10px 2px grey;
+.video-container .participants .participants-container {
+  width: auto;
+  height: 22vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.video-call-container .participants-chats-right .chatting-section .chats .message-left {
-  float: left;
-  clear: both;
-  color: white;
-  background: blue;
-  box-shadow: 2px 2px 20px blue;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
-.video-call-container .participants-chats-right .chatting-section .chats .message-right {
-  float: right;
-  clear: both;
-  background: #ffebeb;
-  color: black;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-.video-call-container .participants-chats-right .chatting-section .input {
-  height: 5vh;
-  position: absolute;
-  bottom: 0px;
-}
-.video-call-container .participants-chats-right .chatting-section .input input {
-  font-size: 18px;
-  width: 22vw;
-  padding: 3px 4px;
-  border: none;
-  margin-left: 20px;
-  border-bottom: 1px solid blue;
-  padding-left: 20px;
-}
-.video-call-container .participants-chats-right .chatting-section .input .submit {
-  font-size: 16px;
-  padding: 3px 20px;
-  background: blue;
-  color: whitesmoke;
-  border-radius: 20px;
+
+::-webkit-scrollbar {
+  display: none;
 }/*# sourceMappingURL=video_call.css.map */
