--- a/src/sass/video_call.scss
+++ b/src/sass/video_call.scss
@@ -1,337 +1,103 @@
-* {
-    margin: 0px;
-    padding: 0px;
+@mixin avgDim($const) {
+    width: calc((1vh + 1vw) * ($const/2));
+    height: calc((1vh + 1vw) * ($const/2));
+}
+@mixin lrSet($calc) {
+    top: calc((1vh + 1vw) * (($calc + 2) / 2));
+    right: calc((1vh + 1vw) * ($calc / 2));
 }
 
-.video-call-container {
-    // border: 2px solid black;
-    height: 93vh;
-    display: flex;
+.video-container {
+    height: 100vh;
+    overflow: scroll;
+    background-color: black;
 
-    .video-call-left {
-        // border: 2px solid black;
-        // border-right: 1px solid black;
-        width: 65vw;
-
-        .video-call {
-            // border: 2px solid red;
-            height: 86vh;
-            display: flex;
-            flex-wrap: wrap;
-
-            // overflow-y: auto;
-            .friend {
-                // background: black;
-                border-radius: 20px;
-                // border: 2px solid black;
-                background: whitesmoke;
-                width: 20vw;
-                height: 20vh;
-                margin: 1% 1%;
-                box-shadow: 5px 5px 20px 10px grey;
-
-                .frnd-icons {
-                    // border: 2px solid white;
-                    display: flex;
-                    width: 70px;
-                    position: relative;
-                    left: 70%;
-                    top: 75%;
-
-                    .frnd-mic {
-                        color: blue;
-
-                        &:hover {
-                            cursor: pointer;
-                        }
-                    }
-
-                    .frnd-video {
-                        margin-left: 30%;
-                        color: black;
-
-                        &:hover {
-                            cursor: pointer;
-                        }
-                    }
-                }
-            }
-
-            .friend-1 {
-                // border: 2px solid blue;
-                width: 65vw;
-                height: 60vh;
-                margin: 1%;
-                box-shadow: 5px 5px 20px 10px grey;
-
-                .frnd1-icons {
-                    // border: 2px solid white;
-                    display: flex;
-                    width: 70px;
-                    position: relative;
-                    left: 87%;
-                    top: 90%;
-
-                    .frnd-mic {
-                        color: blue;
-
-                        &:hover {
-                            cursor: pointer;
-                        }
-                    }
-
-                    .frnd-video {
-                        margin-left: 30%;
-                        color: black;
-
-                        &:hover {
-                            cursor: pointer;
-                        }
-                    }
-                }
-            }
-        }
-
-        .buttons {
-            // border: 2px solid blue;
-            height: 7vh;
-            color: black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 20px;
-
-            .buttons-section-mic {
-                color: blue;
-                margin: 0px 20px;
-                // border: 2px solid black;
-                width: 40px;
-                height: 40px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-                box-shadow: 10px 10px 5px grey;
-
-                &:hover {
-                    cursor: pointer;
-                    scale: 1.1;
-                }
-            }
-
-            .buttons-section-video {
-                color: black;
-                margin: 0px 20px;
-                width: 40px;
-                height: 40px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-                box-shadow: 10px 10px 5px grey;
-
-                &:hover {
-                    cursor: pointer;
-                    scale: 1.1;
-                }
-            }
-
-            .buttons-section-screen-share {
-                color: black;
-                margin: 0px 20px;
-                width: 40px;
-                height: 40px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-                box-shadow: 10px 10px 5px grey;
-
-                &:hover {
-                    cursor: pointer;
-                    scale: 1.1;
-                }
-            }
-
-            .end-meeting {
-                font-size: 18px;
-                padding: 5px 20px;
-                color: white;
-                background: red;
-                border-radius: 20px;
-                margin: 0px 20px;
-                box-shadow: 5px 5px 5px grey;
-
-                &:hover {
-                    scale: 1.1;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
-
-    .participants-chats-right {
-        // border: 2px solid blue;
-        width: 35vw;
-        height: 92vh;
+    .media-stream {
+        height: 100vh;
+        width: 100vw;
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        justify-content: center;    
 
-        .participants-section {
-            // border: 2px solid red;
-            height: 46vh;
+        video {
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+        }
+            a{
+                position: absolute;
+                left: 1vw;
+                top: 2vh;
+                color: rgba(255,255,255,0.7);
+                transition: 0.2s ;
+                z-index: 1;
 
-            .participant-heading {
-                // border: 2px solid black;
-                // border-bottom: 1px solid black;
-                // background: grey;
-                border-radius: 20px;
-                box-shadow: 2px 2px 10px grey;
-                color: black;
-                text-align: center;
-                font-size: 14px;
-                padding: 5px 0px;
-                background: grey;
-                color: white;
-                text-shadow: 1px 1px 10px whitesmoke;
-                font-family: 'Courier New', Courier, monospace;
-            }
-
-            .participants {
-                // border: 1px solid black;
-                border-radius: 20px;
-                height: 40vh;
-                overflow-y: auto;
-                padding: 5px 40px;
-
-                // box-shadow: 2px 2px 0px grey;
-                .participant {
-                    color: black;
-                    // border: 1px solid black;
-                    // background: #ffd6d6;
-                    // color: whitesmoke;
-                    width: 27vw;
-                    font-size: 20px;
-                    padding: 5px 0px 5px 20px;
-                    margin: 20px 0px;
-                    border-radius: 20px;
-                    display: flex;
-                    box-shadow: 6px 6px 10px 4px grey;
-
-                    .participant-icons {
-                        // border: 2px solid black;
-                        width: 70px;
-                        margin-left: auto;
-
-                        .participant-mic {
-                            color: blue;
-                            display: inline;
-
-                            &:hover {
-                                cursor: pointer;
-                            }
-                        }
-
-                        .participant-video {
-                            display: inline;
-                            margin-left: 20px;
-
-                            &:hover {
-                                cursor: pointer;
-                            }
-                        }
-                    }
+                &:hover{
+                    color: rgba(255,255,255,1);
                 }
             }
-        }
+        // }
 
-        .chatting-section {
-            // border: 2px solid black;
-            height: 46vh;
+        .self-camera {
+            position: absolute;
+            @include lrSet(1);
 
-            .chat-heading {
-                // border: 2px solid black;
-                // border-bottom: 1px solid black;
-                // border-top: 1px solid black;
-                border-radius: 20px;
-                // background:grey;
-                font-size: 14px;
+            width: 10vw;
+            height: 20vh;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .camera {
+                width: 5vw;
+                height: 10vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                video{
+                    @include avgDim(6);
+                    object-fit: cover;
+                    border-radius: 50%;
+                    transform: rotateY(180deg);
+                }
+            }
+
+            .buttons-toggle {
+                height: 4vh;
+                width: 9vw;
                 display: flex;
                 justify-content: center;
-                align-content: center;
-                color: black;
-                font-family: 'Courier New', Courier, monospace;
-                text-shadow: 2px 2px 10px whitesmoke;
-                box-shadow: 2px 2px 10px 5px grey;
-                background: grey;
-                color: white;
-                padding: 4px 0px;
-            }
+                align-items: center;
 
-            .chats {
-                // border: 1px solid black;
-                border-radius: 20px;
-                height: 37vh;
-                color: black;
-                overflow-y: auto;
 
-                .message {
-                    margin: 5px 10px;
-                    padding: 4px 10px;
-                    box-shadow: 2px 2px 10px 2px grey;
-                }
-
-                .message-left {
-                    float: left;
-                    clear: both;
-                    color: white;
-                    background: blue;
-                    box-shadow: 2px 2px 20px blue;
-                    border-top-left-radius: 20px;
-                    border-top-right-radius: 20px;
-                    border-bottom-right-radius: 20px;
-                }
-
-                .message-right {
-                    float: right;
-                    clear: both;
-                    background: #ffebeb;
-                    color: black;
-                    border-top-left-radius: 20px;
-                    border-top-right-radius: 20px;
-                    border-bottom-left-radius: 20px;
-                }
-            }
-
-            .input {
-                // border: 2px solid blue;
-                height: 5vh;
-                position: absolute;
-                bottom: 0px;
-
-                // box-shadow: 2px 2px 10px 5px grey;
-                input {
-                    font-size: 18px;
-                    width: 22vw;
-                    padding: 3px 4px;
-                    border: none;
-                    // border-bottom: 2px solid blue;
-                    margin-left: 20px;
-                    // border-radius: 20px;
-                    // border: 1px solid blue;
-                    border-bottom: 1px solid blue;
-                    padding-left: 20px;
-
-                }
-
-                .submit {
-                    font-size: 16px;
-                    padding: 3px 20px;
-                    background: blue;
-                    color: whitesmoke;
-                    border-radius: 20px;
-                }
             }
         }
     }
+
+    .participants {
+        height: 30vh;
+        width: 100vw;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow-x: scroll;
+        
+
+        .participants-container{
+            width: auto;
+            height: 22vh;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+    
+
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
