--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -4,14 +4,21 @@
     overflow: hidden;
 }
 
+@mixin setFontSize($val) {
+    font-size: calc((1vh + 1vw) * ($val/2)) ;
+}
+
 .container {
     // border: 2px solid black;
+    margin-top: 2vh;
     height: 93vh;
     width: 100vw;
     display: flex;
+    justify-content: center;
+    align-items: center;
 
     .left {
-        width: 60vw;
+        flex: 1.8;
         // border: 2px solid black;
         display: flex;
         flex-direction: column;
@@ -22,45 +29,23 @@
         }
 
         .image {
-            // border: 2px solid red;
             height: 90vh;
+            object-fit: cover;
             background: url('../images/bg1.jpg') no-repeat center;
             background-size: 850px auto;
         }
     }
 
     .right {
-        // border: 2px solid black;
-        width: 40vw;
+        flex: 1.4;
         display: flex;
         flex-direction: column;
-
-        // align-items: center;
-        h2 {
-            // border: 2px solid black;
-            text-align: center;
-            margin-top: 5%;
-            padding: 5px 10px;
-
-            &::before {
-                content: "Melon";
-                color: blue;
-                font-size: 40px;
-                font-family: 'Italianno', cursive;
-            }
-
-            &::after {
-                content: "Play";
-                color: black;
-                font-size: 40px;
-                font-family: 'Roboto', sans-serif;
-            }
-        }
-
+        justify-content: center;
+        margin-inline: 1vw;
         h3 {
+            @include setFontSize(4.5);
             color: black;
             text-align: left;
-            font-size: 40px;
             margin-top: 5%;
         }
 
@@ -70,6 +55,7 @@
         }
 
         p {
+            @include setFontSize(1.8);
             color: black;
             margin-top: 2%;
         }
@@ -94,20 +80,21 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 32vh;
+            height: 40vh;
 
             .about {
-                // border: 2px solid black;
                 margin-top: 1%;
-                width: 450px;
-                margin-left: 50px;
                 text-align: left;
+                margin-left: 5vw;
+                margin-right: 1vw;
+                width: 35vw;
                 h5 {
+                    @include setFontSize(4.5);
                     display: inline;
-                    font-size: 40px;
                     color: black;
                 }
                 p{
+                    @include setFontSize(1.8);
                     color: black;
                 }
             }
