--- a/src/sass/video_call.scss
+++ b/src/sass/video_call.scss
@@ -28,12 +28,12 @@
                 position: absolute;
                 left: 1vw;
                 top: 2vh;
-                color: rgba(255,255,255,0.7);
+                color: rgba(149,92,92, 0.5);
                 transition: 0.2s ;
                 z-index: 1;
 
                 &:hover{
-                    color: rgba(255,255,255,1);
+                    color: rgba(149, 92, 92,1);
                 }
             }
         // }
