--- a/src/components/userCall/style/userCall.css
+++ b/src/components/userCall/style/userCall.css
@@ -1,34 +1,43 @@
 .participant {
-  z-index: 1;
+  z-index: 10;
   flex: none;
-  background: white;
-  width: 20vw;
+  width: 15vw;
   height: 20vh;
   border-radius: 10px;
   margin: 1vh 1vw;
 }
 .participant .participant-video {
+  z-index: 1;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: rotateY(180deg);
 }
 .participant .participants-icons {
   position: relative;
   width: 20vw;
   height: 10vh;
-  z-index: 10;
+  z-index: 10000000;
   top: -22%;
   left: 75%;
-  background-color: white;
   color: black;
   display: flex;
 }
 .participant .participants-icons .mic-icon {
   margin-right: 5%;
-  color: blue;
+  color: rgba(255, 255, 255, 0.7);
+  transition: 0.2s;
 }
 .participant .participants-icons .mic-icon:hover {
+  color: white;
   cursor: pointer;
 }
+.participant .participants-icons .video-icon {
+  color: rgba(255, 255, 255, 0.7);
+  transition: 0.2s;
+}
 .participant .participants-icons .video-icon:hover {
+  color: white;
   cursor: pointer;
 }/*# sourceMappingURL=userCall.css.map */
