--- a/src/components/userCall/style/userCall.scss
+++ b/src/components/userCall/style/userCall.scss
@@ -1,39 +1,47 @@
 .participant {
-    z-index: 1;
+    z-index: 10;
     flex: none;
-    background: white;
-    width: 20vw;
+    width: 15vw;
+
     height: 20vh;
     border-radius: 10px;
     margin: 1vh 1vw;
 
-    .participant-video{
+    .participant-video {
+        z-index: 1;
         width: 100%;
         height: 100%;
+        object-fit: cover;
+        transform: rotateY(180deg);
     }
 
     .participants-icons {
         position: relative;
         width: 20vw;
         height: 10vh;
-        z-index: 10;
+        z-index: 10000000;
         top: -22%;
         left: 75%;
-        background-color: white;
         color: black;
         display: flex;
 
         .mic-icon {
             margin-right: 5%;
-            color: blue;
+            color: rgba($color: #ffffff, $alpha: 0.7);
+            transition: 0.2s;
 
             &:hover {
+                color: rgba($color: #ffffff, $alpha: 1);
                 cursor: pointer;
             }
         }
 
         .video-icon {
+            color: rgba($color: #ffffff, $alpha: 0.7);
+            transition: 0.2s;
+
             &:hover {
+                color: rgba($color: #ffffff, $alpha: 1);
                 cursor: pointer;
             }
         }
